# CanvasX

./: BOOTSTRAP.md  Cargo.toml  DISCREPANCY_ANALYSIS.md  QuickStart.md  README.md  build.rs  build_output.txt  convert-icon-fixed.py  convert-icon-hq.py  convert-icon-magick.py  convert-icon-new.py  convert-icon.py  improvement.md
assets/: README.md
src/: api.rs  bootstrap.rs  capabilities.rs  cli.rs  config.rs  embed.rs  env.rs  installer.rs  lib.rs  logging.rs  main.rs  run.rs  theming.rs
src/animate/: easing.rs  interpolate.rs  mod.rs  timeline.rs
src/compiler/: bundle.rs  css.rs  editable.rs  html.rs  mod.rs
src/compiler/css/: css.rs  css3.rs  mod.rs  parsing.rs  version.rs
src/cxrd/: animation.rs  asset.rs  document.rs  input.rs  mod.rs  node.rs  style.rs  value.rs
src/cxrl/: builder.rs  loader.rs  manifest.rs  mod.rs
src/cxrp/: builder.rs  loader.rs  manifest.rs  mod.rs
src/devtools/: console.rs  context_menu.rs  debug_server.rs  elements.rs  mod.rs  overlay.rs  palette.rs  theme.rs  widgets.rs
src/gpu/: context.rs  mod.rs  pipeline.rs  renderer.rs  texture.rs  vertex.rs
src/gpu/shaders/: ui_box.wgsl
src/instance/: mod.rs
src/ipc/: client.rs  mod.rs  opendesktop.rs  protocol.rs  sentinel.rs
src/layout/: engine.rs  flex.rs  mod.rs  types.rs
src/platform/: desktop.rs  mod.rs  monitor.rs
src/prd/: animation.rs  asset.rs  document.rs  input.rs  mod.rs  node.rs  style.rs  value.rs
src/scene/: app_host.rs  graph.rs  input_handler.rs  mod.rs  paint.rs  text.rs
src/scripting/: canvas2d.rs  js_worker.rs  mod.rs  runtime.rs  v8_runtime.rs
src/tray/: mod.rs
