[package]
name = "prism-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Ico2"]
description = "Prism Runtime - a standalone GPU-native 2D scene graph renderer for desktop personalization, widgets, and interactive content"
license = "Apache 2.0"
repository = "https://github.com/The-Ico2/prism-runtime"
keywords = ["gpu", "renderer", "desktop", "wallpaper", "widget"]
categories = ["rendering", "graphics"]

[lib]
name = "prism_runtime"
path = "src/lib.rs"

[[bin]]
name = "prism-rt"
path = "src/main.rs"

[[bin]]
name = "prism"
path = "src/cli.rs"

[dependencies]
# --- GPU / Rendering ---
wgpu = "28.0.0"
winit = { version = "0.30.13", features = ["rwh_06"] }
glyphon = "0.10.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "webp", "ico"] }

# --- Serialization ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "2.0"

# --- HTML/CSS Parsing (openrender subset) ---
cssparser = "0.36.0"

# --- JavaScript Engine ---
v8 = "147.1.0"

# --- Canvas 2D software rendering ---
tiny-skia = "0.12.0"
resvg = "0.47.0"

# --- Platform (Windows) ---
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Registry",
]}
windows-core = "0.62.2"

# --- Utility ---
anyhow = "1.0.102"
log = "0.4.29"
chrono = "0.4.44"
parking_lot = "0.12.5"
notify = "8.2.0"
walkdir = "2.5.0"
include_dir = "0.7"
smallvec = "1.15.1"
rustc-hash = "2.1.1"
pollster = "0.4.0"
zip = "8.2.0"
sha2 = "0.10.9"
hex = "0.4.3"
raw-window-handle = "0.6.2"
tray-icon = "0.21"

[build-dependencies]
winresource = "0.1.30"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

